add individual exp to main text 1

--- a/HDDM/GoodSelf_HDDM_extract_data.ipynb
+++ b/HDDM/GoodSelf_HDDM_extract_data.ipynb
@@ -60,17 +60,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Notebook is running: /opt/conda/bin/python\n",
-      "The current HDDM version is 3.7.6\n",
-      "The current HDDM version is 0.8.0\n",
-      "The current IPython version is 7.15.0\n"
+      "Notebook is running: /home/hcp4715/miniconda3/envs/hddm/bin/python\n",
+      "The current HDDM version is 3.7.7\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/opt/conda/lib/python3.7/site-packages/IPython/parallel.py:13: ShimWarning: The `IPython.parallel` package has been deprecated since IPython 4.0. You should import from ipyparallel instead.\n",
+      "\n",
+      "Bad key \"text.kerning_factor\" on line 4 in\n",
+      "/home/hcp4715/miniconda3/envs/hddm/lib/python3.7/site-packages/matplotlib/mpl-data/stylelib/_classic_test_patch.mplstyle.\n",
+      "You probably need to get an updated matplotlibrc file from\n",
+      "https://github.com/matplotlib/matplotlib/blob/v3.1.3/matplotlibrc.template\n",
+      "or from the matplotlib source distribution\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current HDDM version is 0.8.0\n",
+      "The current IPython version is 7.13.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/hcp4715/miniconda3/envs/hddm/lib/python3.7/site-packages/IPython/parallel.py:13: ShimWarning: The `IPython.parallel` package has been deprecated since IPython 4.0. You should import from ipyparallel instead.\n",
       "  \"You should import from ipyparallel instead.\", ShimWarning)\n"
      ]
     }
@@ -114,7 +132,8 @@
    "source": [
     "## Extracting data and save\n",
     "\n",
-    "Using a for loop to extract individual's parameter and save"
+    "### Extract parameters for correlation analysis\n",
+    "Using a for loop to extract individual's parameter (MAP) and save."
    ]
   },
   {
@@ -273,6 +292,154 @@
     "    subj_Data = models_comb.get_subj_nodes()\n",
     "    subj_Data.head()\n",
     "    subj_Data.to_csv(param_fname)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extract group-level parameters' trace for plotting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing Model 0 of df1a\n",
+      "Processing Model 1 of df1a\n",
+      "Processing Model 2 of df1a\n",
+      "Processing Model 3 of df1a\n",
+      "chain 0 (1000, 24)\n",
+      "chain 1 (1000, 24)\n",
+      "chain 2 (1000, 24)\n",
+      "chain 3 (1000, 24)\n",
+      "Processing Model 0 of df1b\n",
+      "Processing Model 1 of df1b\n",
+      "Processing Model 2 of df1b\n",
+      "Processing Model 3 of df1b\n",
+      "chain 0 (1000, 24)\n",
+      "chain 1 (1000, 24)\n",
+      "chain 2 (1000, 24)\n",
+      "chain 3 (1000, 24)\n",
+      "Processing Model 0 of df1c\n",
+      "Processing Model 1 of df1c\n",
+      "Processing Model 2 of df1c\n",
+      "Processing Model 3 of df1c\n",
+      "chain 0 (1000, 24)\n",
+      "chain 1 (1000, 24)\n",
+      "chain 2 (1000, 24)\n",
+      "chain 3 (1000, 24)\n",
+      "Processing Model 0 of df2\n",
+      "Processing Model 1 of df2\n",
+      "Processing Model 2 of df2\n",
+      "Processing Model 3 of df2\n",
+      "chain 0 (1000, 24)\n",
+      "chain 1 (1000, 24)\n",
+      "chain 2 (1000, 24)\n",
+      "chain 3 (1000, 24)\n",
+      "Processing Model 0 of df6a\n",
+      "Processing Model 1 of df6a\n",
+      "Processing Model 2 of df6a\n",
+      "Processing Model 3 of df6a\n",
+      "chain 0 (1000, 24)\n",
+      "chain 1 (1000, 24)\n",
+      "chain 2 (1000, 24)\n",
+      "chain 3 (1000, 24)\n",
+      "Processing Model 0 of df5\n",
+      "Processing Model 1 of df5\n",
+      "Processing Model 2 of df5\n",
+      "Processing Model 3 of df5\n",
+      "chain 0 (1000, 78)\n",
+      "chain 1 (1000, 78)\n",
+      "chain 2 (1000, 78)\n",
+      "chain 3 (1000, 78)\n",
+      "Processing Model 0 of df3a\n",
+      "Processing Model 1 of df3a\n",
+      "Processing Model 2 of df3a\n",
+      "Processing Model 3 of df3a\n",
+      "chain 0 (1000, 42)\n",
+      "chain 1 (1000, 42)\n",
+      "chain 2 (1000, 42)\n",
+      "chain 3 (1000, 42)\n",
+      "Processing Model 0 of df3b\n",
+      "Processing Model 1 of df3b\n",
+      "Processing Model 2 of df3b\n",
+      "Processing Model 3 of df3b\n",
+      "chain 0 (1000, 42)\n",
+      "chain 1 (1000, 42)\n",
+      "chain 2 (1000, 42)\n",
+      "chain 3 (1000, 42)\n",
+      "Processing Model 0 of df4a\n",
+      "Processing Model 1 of df4a\n",
+      "Processing Model 2 of df4a\n",
+      "Processing Model 3 of df4a\n",
+      "chain 0 (1000, 42)\n",
+      "chain 1 (1000, 42)\n",
+      "chain 2 (1000, 42)\n",
+      "chain 3 (1000, 42)\n",
+      "Processing Model 0 of df4b\n",
+      "Processing Model 1 of df4b\n",
+      "Processing Model 2 of df4b\n",
+      "Processing Model 3 of df4b\n",
+      "chain 0 (1000, 42)\n",
+      "chain 1 (1000, 42)\n",
+      "chain 2 (1000, 42)\n",
+      "chain 3 (1000, 42)\n",
+      "Processing Model 0 of df6b\n",
+      "Processing Model 1 of df6b\n",
+      "Processing Model 2 of df6b\n",
+      "Processing Model 3 of df6b\n",
+      "chain 0 (1000, 42)\n",
+      "chain 1 (1000, 42)\n",
+      "chain 2 (1000, 42)\n",
+      "chain 3 (1000, 42)\n",
+      "Processing Model 0 of df7a\n",
+      "Processing Model 1 of df7a\n",
+      "Processing Model 2 of df7a\n",
+      "Processing Model 3 of df7a\n",
+      "chain 0 (1000, 30)\n",
+      "chain 1 (1000, 30)\n",
+      "chain 2 (1000, 30)\n",
+      "chain 3 (1000, 30)\n",
+      "Processing Model 0 of df7b\n",
+      "Processing Model 1 of df7b\n",
+      "Processing Model 2 of df7b\n",
+      "Processing Model 3 of df7b\n",
+      "chain 0 (1000, 30)\n",
+      "chain 1 (1000, 30)\n",
+      "chain 2 (1000, 30)\n",
+      "chain 3 (1000, 30)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for exp_name in list_e:\n",
+    "    models = []\n",
+    "    for id in range(4):\n",
+    "        mname = exp_name + '_chain__vtaz_%i'%id\n",
+    "        # print(mname)\n",
+    "        print('Processing Model %i of'%id, exp_name)\n",
+    "        m = hddm.load(mname)\n",
+    "        models.append(m)\n",
+    "        \n",
+    "    df_grp_traces = []\n",
+    "    for i in range(4):\n",
+    "        df_m = models[i]\n",
+    "        df_grp_trace = df_m.get_group_traces()\n",
+    "        df_grp_trace['chain'] = i\n",
+    "        print('chain', i, df_grp_trace.shape)\n",
+    "        df_grp_traces.append(df_grp_trace)\n",
+    "    df_grp_traces = pd.concat(df_grp_traces)\n",
+    "    \n",
+    "    trace_fname = exp_name + '_group_traces.csv'\n",
+    "    df_grp_traces.to_csv(trace_fname, index=False) # save to csv"
    ]
   },
   {
@@ -3089,7 +3256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
